# 3dgs_monocular_depth_init

./: .envrc  .gitignore  .gitmodules  LICENSE  README.md  environment.yml  evaluate.sh  evaluator.py  install.sh  install_dependencies.sh  metric3ddemo.py  nerfbaselines_evaluator.py  plan.md  playground.ipynb  pyproject.toml  requirements.txt  results.md  run_viewer.sh  setup.py
.devcontainer/: Dockerfile  devcontainer.json  init.sh
gs_init_compare/: config.py  evaluator.py  monocular_depth_init.py  runner.py  runner.py_edited.py  simple_trainer.py  simple_trainer_edited.py  trainer.py
gs_init_compare/datasets/: colmap.py
gs_init_compare/depth_alignment/: __init__.py  config.py  enum.py  interface.py  interp.py  lstsqrs.py  pipeline.py  ransacs.py
gs_init_compare/depth_alignment/alignment/: interp.py  lstsqrs.py  ransacs.py
gs_init_compare/depth_alignment/segmentation/: __init__.py  region_margin.py  region_merging.py  sam.py  slic.py
gs_init_compare/depth_prediction/: __init__.py  aligned_depth.pkl  configs.py  lab.ipynb  points_from_depth.py
gs_init_compare/depth_prediction/predictors/: apple_depth_pro.py  depth_anything_v2.py  depth_predictor_interface.py  metric3d.py  moge.py  unidepth.py
gs_init_compare/depth_prediction/utils/: image_filtering.py
gs_init_compare/depth_subsampling/: adaptive_subsampling.py  config.py  interface.py  num_sfm_points_mask.py  static_subsampler.py
gs_init_compare/mono_depth_init_ply/360_v2_garden/Metric3d_large/DSC07957.JPG/: my_points_world.ply  sfm_points_plane_proj.ply  sfm_points_world.ply
gs_init_compare/monocular_depth_init/: adaptive_subsampling.py  lab.ipynb  monocular_depth_init.py  points_from_depth.py
gs_init_compare/monocular_depth_init/predictors/: apple_depth_pro.py  depth_anything_v2.py  depth_predictor_interface.py  metric3d.py  moge.py  unidepth.py
gs_init_compare/monocular_depth_init/utils/: depth_alignment_ransac.py  download_with_tqdm.py  point_cloud_export.py  points_from_depth.py
gs_init_compare/nerfbaselines_integration/: make_presets.py  method.py  method_spec.py  scannetpp_nerfbaselines_loader.py
gs_init_compare/point_cloud_postprocess/: config.py  postprocess.py  prepare_descriptors.py
gs_init_compare/utils/: cuda_memory.py
gsplat_examples/: simple_trainer.py  simple_trainer_2dgs.py
metric3d_configs/: README.md  gs_init_compare  metric_depth_vit_large_800k.pth  metric_depth_vit_small_800k.pth  vit.raft5.large.py  vit.raft5.small.py
metric_3d/: .gitattributes  README.md  app.py  requirements.txt
metric_3d/mono/utils/: running.py
native_modules/: CMakeLists.txt  conanfile.py  pyproject.toml
native_modules/common/: CMakeLists.txt
native_modules/interpolation/: CMakeLists.txt
native_modules/interpolation/src/: defines.h  dt_interp.cpp  dt_interp.h  raster_utils.cpp  raster_utils.h  scale_factor_interpolation.cpp
native_modules/interpolation/src/scale_factor_interpolation/: __init__.py  __init__.pyi
native_modules/subsampling/: CMakeLists.txt  pyproject.toml
native_modules/subsampling/src/: debug.h  defines.h  geometry.h  impl.cpp  impl.h  pointcloud_subsampling.cpp  py_output_array.h  stack.h  stat_accumulator.h  util.h
native_modules/subsampling/src/pointcloud_subsampling/: __init__.py  __init__.pyi  subsampling_params.py
results_processing_scripts/: common.py  legacy_make_results_table_single_scene.py  legacy_make_results_table_single_scene_noise.py  make_results_table.py  make_results_table_average.py  parameters.py  patches.py  visualize_patches_table.py
scripts/dev/: install_eigen_gdb_pritner.sh
src/: config.py  evaluator.py  init_splats_metric3d.py  lab.ipynb  lab2.ipynb  runner.py  test.py  trainer.py  utils.py
src/combined_results/garden/: events.out.tfevents.1731183224.8fcd87e2e1c8.67066.8
src/combined_results/garden_vit.raft5.large_downsample_10/: events.out.tfevents.1731179181.8fcd87e2e1c8.67066.2
src/combined_results/garden_vit.raft5.large_downsample_20/: events.out.tfevents.1731180103.8fcd87e2e1c8.67066.3
src/combined_results/garden_vit.raft5.small_downsample_10/: events.out.tfevents.1731177827.8fcd87e2e1c8.67066.0
src/combined_results/garden_vit.raft5.small_downsample_20/: events.out.tfevents.1731178600.8fcd87e2e1c8.67066.1
src/combined_results/stump/: events.out.tfevents.1731183689.8fcd87e2e1c8.67066.9
src/combined_results/stump_vit.raft5.large_downsample_10/: events.out.tfevents.1731181954.8fcd87e2e1c8.67066.6
src/combined_results/stump_vit.raft5.large_downsample_20/: events.out.tfevents.1731182647.8fcd87e2e1c8.67066.7
src/combined_results/stump_vit.raft5.small_downsample_10/: events.out.tfevents.1731180823.8fcd87e2e1c8.67066.4
src/combined_results/stump_vit.raft5.small_downsample_20/: events.out.tfevents.1731181454.8fcd87e2e1c8.67066.5
src/datasets/: colmap.py
src/metric3d/: download_weights.py
src/metric3d/mono/model/model_pipelines/: __base_model__.py  dense_pipeline.py
src/metric3d/mono/utils/: comm.py  do_test.py  mldb.py  running.py  visualization.py
src/monocular_depth_init/: __init__.py  init_splats_metric3d.py  monocular_depth_init.py
src/monocular_depth_init/predictors/: apple_depth_pro.py  depth_predictor_interface.py  metric3d.py  moge.py
src/monocular_depth_init/utils/: points_from_depth.py
src/nerfbaselines_integration/: method.py  method_spec.py
