[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gs_init_compare"
version = "0.1.0"
# Dynamic dependencies used to facilitate using project-relative paths for some dependencies
dynamic = ["dependencies"]
requires-python = ">=3.10"
authors = [{ name = "Ivan Desiatov", email = "desiaiva@cvut.cz" }]
maintainers = [{ name = "Ivan Desiatov", email = "desiaiva@cvut.cz" }]
description = "TODO"
classifiers = ["Programming Language :: Python"]

[tool.setuptools]
packages = ["gs_init_compare"]

[[tool.mypy.overrides]]
module = [
    'depth_pro',
    'unidepth.*',
    'gsplat.*',
    'open3d',
    'mmengine',
    'nerfbaselines.*',
    'mmcv.*',
    'tensorly.*',
    'nerfview',
    'fused_ssim',
]
ignore_missing_imports = true
