[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gs_init_compare"
version = "1.0.0"
# Dynamic dependencies used to facilitate using project-relative paths for some dependencies
dynamic = ["dependencies"]
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Ivan Desiatov", email = "deivse@gmail.com" }]
maintainers = [{ name = "Ivan Desiatov", email = "deivse@gmail.com" }]
description = "3DGS initialized from monocular depth prediction."
readme = "README.md"
classifiers = ["Programming Language :: Python"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88

[[tool.mypy.overrides]]
module = [
    'depth_pro',
    'unidepth.*',
    'gsplat.*',
    'open3d',
    'mmengine',
    'nerfbaselines.*',
    'mmcv.*',
    'tensorly.*',
    'nerfview',
    'fused_ssim',
]
ignore_missing_imports = true
