[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pointcloud_subsampling"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.minimum-version = "3.15"
cmake.build-type = "RelWithDebInfo"
